--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-body{
+body {
     text-align: center;
+    font-family: open sans, sans-serif;
+    background-color: #8a71c9;
+    color: #ffffffb7;
+}
+
+h2 {
+    color: #2a0074;
 }
