--- a/style.css
+++ b/style.css
@@ -22,3 +22,28 @@ h2 {
 .vida-adulta{
     color: #ffe36d;
 }
+
+section{
+    max-width: 60%;
+    margin:0 auto;
+}
+
+h1{
+  font-size: 60px;
+  font-weight: 300;
+}
+
+h3{
+  font-size:22px;
+  font-style: italic;
+}
+
+
+p{
+  line-height: 1.5;
+  font-size: 20px;
+}
+
+img{
+  width: 100%;
+}
