--- a/style.css
+++ b/style.css
@@ -58,3 +58,10 @@ a {
   color: #9ff;
   font-weight: 700;
 }
+
+.principal a{
+  color: white;
+  font-size: 20px;
+  text-decoration: underline;
+  background-color: pink;
+}
