--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: open sans, sans-serif;
     background-color: #8a71c9;
     color: #ffffffb7;
-    margin: 0px;
+    margin: 0px 0px 30px 0px;
 }
 
 h2 {
@@ -24,8 +24,12 @@ h2 {
 }
 
 section{
-    max-width: 60%;
+    width: 60%;
     margin:0 auto;
+}
+
+section section{
+  width: 100%;
 }
 
 h1{
@@ -77,4 +81,11 @@ a {
   text-decoration: underline;
   color: #FFF;
   font-weight: normal;
+}
+
+button{
+  background-color: #41f341;
+  border: solid 1px transparent;
+  padding: 2px 20px;
+  border-radius: 3px;
 }
